--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,15 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.GromkiVopros"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".screens.CorrectAnswerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".screens.GameAnimationActivity"
+            android:exported="false" />
         <activity
             android:name=".screens.CheckAnswerActivity"
             android:exported="false" />
