- finally fixed music and timer - several questions now - checking answers and telling if it's correct or not - correct/incorrect answers count - list of what is needed to be fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".screens.CorrectAnswerActivity"
+            android:name=".screens.StartAnimationActivity"
             android:exported="false" />
         <activity
-            android:name=".screens.GameAnimationActivity"
+            android:name=".screens.CorrectAnswerActivity"
             android:exported="false" />
         <activity
             android:name=".screens.CheckAnswerActivity"
